welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if (num(i+1) = num(i) + 1) {compteur = compteur + 1}
                 ^