welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur:Int = 0
  for (i <- 0 to num.length -1) {
    if (num(i+1) = num(i) + 1) {compteur = compteur + 1}
  }
  return {compteur}
}